--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "core-js": "^3.46.0",
     "css-loader": "^7.1.2",
+    "csurf": "^1.11.0",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
     "mongoose": "^8.19.4",
     "regenerator-runtime": "^0.14.1",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "validator": "^13.15.23"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
